# ADSD_coursework

CORDIC/: CMakeLists.txt  cordic.cpp  cordic_prb.cpp
CORDIC_ORIGINAL/: cordic.cpp  cordic.h
CORDIC_TEST_VERSION/: CMakeLists.txt  cordic_t.cpp  cordic_t.h  cordic_t_prb.cpp
CORDIC_design/: cordic.cpp  cordic.h  cordic_tb.cpp
CORDIC_design/cordic_hls/: .cproject  .project  .vivado_hls_log_all.xml  vivado_hls.app
CORDIC_design/cordic_hls/.apc/: autopilot.apfmapping
CORDIC_design/cordic_hls/solution1/: script.tcl  solution1.aps
CORDIC_design/cordic_hls/solution1/.autopilot/: .automg_exit  .autopilot_exit  .autosim_exit
CORDIC_design/cordic_hls/solution1/.autopilot/db/: a.export.ll  a.g.1.ll  a.g.2.bc  a.g.2.prechk.bc  a.o.1.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.2.ll  a.o.3.bc  a.o.3.ll  a.o.bc  autopilot.rtl.models.txt  cordic.pp.0.cpp  cordic.pp.0.cpp.ap-line.cpp  cordic.pp.0.cpp.ap-line.cpp.CXX  cordic.pragma.0.cpp.ap-line.CXX  cordic.pragma.1.cpp  cordic.pragma.2.cpp  coshsinh_cordic.adb  coshsinh_cordic.bind.adb  coshsinh_cordic.bind.adb.xml  coshsinh_cordic.compgen.tcl  coshsinh_cordic.constraint.tcl  coshsinh_cordic.design.xml  coshsinh_cordic.rtl_wrap.cfg.tcl  coshsinh_cordic.sched.adb  coshsinh_cordic.sched.adb.xml  (+10 more)
CORDIC_design/cordic_hls/solution1/sim/: .autosim.status
SVM_Classifier/: CMakeLists.txt  classifier.cpp  classifier.h  classifier_tb.cpp  cordic.cpp  cordic.h  dot_p.cpp  dot_p.h  out_tanh.h
SVM_Classifier_HLS/: SV.h  alpha.h  classifier.cpp  classifier.h  classifier_tb.cpp  cordic.cpp  cordic.h  dot_p.cpp  dot_p.h  testData.h
(+104 files in other folders)
